--- a/putninalozi/templates/home.html
+++ b/putninalozi/templates/home.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    {% if current_user.authorization not in ['c_user', 'c_member'] %}
+    {% if current_user.authorization not in ['c_user', 'c_member', 'o_cashier'] %}
     <tr>
       <td> <a class="btn btn-info" href="{{ url_for('main.settings', company_id=current_user.user_company.id) }}">Osnovna podešavanja</a> </td>
       <td>Podešavanja - razna</td>
