--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -39,7 +39,7 @@
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Početna</a>
                 <a class="nav-item nav-link" href="{{ url_for('travel_warrants.travel_warrant_list') }}">Putni nalozi</a>
-                {% if current_user.authorization in ['s_admin', 'c_admin', 'c_principal', 'c_founder'] %}
+                {% if current_user.authorization in ['s_admin', 'c_admin', 'c_functionary', 'c_founder', 'c_cashier'] %}
                 <li class="nav-item dropdown dropdown--align-right">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Podešavanja
