--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-{% if current_user.authorization not in ['c_user', 'c_member'] %}
+{% if current_user.authorization not in ['c_user', 'c_member', 'o_cashier'] %}
 <a class="btn btn-info btn-sm m-1" href="{{ url_for('vehicles.register_v') }}">Registrujte novo vozilo</a>
 <hr>
 {% endif %}
@@ -24,7 +24,7 @@
         </tr>
       {% endfor %}
     </tbody>
-  {% elif current_user.authorization in ['c_admin', 'c_principal', 'c_founder'] %}
+  {% elif current_user.authorization in ['c_admin', 'c_functionary', 'c_founder'] %}
     <thead>
       <tr>
         <th>Tip vozila</th>
