--- a/putninalozi/templates/home.html
+++ b/putninalozi/templates/home.html
@@ -4,7 +4,7 @@
   <thead>
     <tr id="header">
       <th>Modul</th>
-      <th>Opis Modula</th>
+      <th>Opis modula</th>
     </tr>
   </thead>
   <tbody>
@@ -38,7 +38,7 @@
   </tbody>
 </table>
 <h2>O softveru:</h2>
-<p class="emphasized">putninalozi.online je softver koji omoguća izradu, evidenciju i štampu putnih naloga za službena putovanja u zemlji i inostranstvu. On omogućava umrežavanje korisnika koji zajednički mogu da rade na generisanju, popunjavanju i knjiženju putnih naloga. Softver je razvio Studio Implicit, firma sa bogatim iskustvom u razvoju poslovnih rešenja.</p>
+<p class="emphasized">Softver putninalozi.online omogućava izradu, evidenciju i štampu putnih naloga za službena putovanja u zemlji i inostranstvu. On umrežava korisnike koji zajednički mogu da rade na generisanju, popunjavanju i knjiženju putnih naloga. Softver je razvio Studio Implicit, firma sa bogatim iskustvom u razvoju poslovnih rešenja.</p>
 <br>
 <div class="content-section">
   <h3>Zašto da koristite naš softver?</h3>
