--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -516,12 +516,12 @@
         <br>Sa zadatkom: {{ warrant.with_task }}
         <br>Relacija: {{ warrant.relation }}
         <br>
-        <br> Da bi izbrisali putni nalog potrebno je uneti svoju šifru.
+        <br> Da biste izbrisali putni nalog potrebno je uneti svoju šifru.
       </label>
       </div>
       <div class="modal-footer">
       <form  action="{{ url_for('travel_warrants.delete_travel_warrant', warrant_id=warrant.travel_warrant_id) }}" method="post">
-          <input class="form-control" type="password" id="input_password" name="input_password" value="" placeholder="potvrdi lozinkom">
+          <input class="form-control" type="password" id="input_password" name="input_password" value="" placeholder="potvrdite lozinkom">
           <br>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvorite</button>
           <input class="btn btn-danger" type="submit" value="Izbrišite putni nlaog">
