--- a/putninalozi/templates/user.html
+++ b/putninalozi/templates/user.html
@@ -146,11 +146,11 @@
         </button>
         </div>
         <div class="modal-body">
-        <label for="input_password">Da bi izbrisali korisnika potrebno je uneti svoju šifru.</label>
+        <label for="input_password">Da biste izbrisali korisnika potrebno je uneti svoju šifru.</label>
         </div>
         <div class="modal-footer">
         <form  action="{{ url_for('users.delete_user', user_id=user.id) }}" method="post">
-            <input class="form-control" type="password" id="input_password" name="input_password" value="" placeholder="potvrdi lozinkom">
+            <input class="form-control" type="password" id="input_password" name="input_password" value="" placeholder="potvrdite lozinkom">
             <br>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvorite</button>
             <input class="btn btn-danger" type="submit" value="Izbrišite profil korisnika">
