--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -437,7 +437,7 @@
         <a
           class="btn btn-outline-danger btn-block"
           href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}"
-          >Dodaj trošak</a
+          >Dodajte trošak</a
         >
       </div>
       <br />
