--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -3,7 +3,7 @@
   {{ form.hidden_tag() }}
   <fieldset class="form-group">
   </fieldset>
-  {% if current_user.authorization not in ['c_user', 'c_member', 'o_cashier'] %}
+  {% if current_user.authorization not in ['c_user', 'c_member'] %}
   <div id="accordionZero">
     <div class="accordion">
       <div class="accordion-item">
