--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -4,7 +4,7 @@
   <form  action="" method="POST">
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">{{ legend }}</legend>
+      <legend class="border-bottom mb-4">Broj putnog naloga: {{ warrant.travel_warrant_number }}</legend>
       <legend class=""> Zaposleni: <input type="text" class="form-control form-control-lg" value="{{ warrant.travelwarrant_user.name }}  {{ warrant.travelwarrant_user.surname }}" disabled></legend>
       <legend class="border-bottom mb-4"> <input class="form-control form-control-lg" type="datetime-local", value="{{ warrant.start_datetime }}" disabled></legend>
       {% if form.errors %}
@@ -15,7 +15,7 @@
           <div class="accordion-item">
             <div class="accordion-header" id="headingZero">
               <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
-                <h3><strong>Broj putnog naloga: {{ warrant.travel_warrant_number }}</strong></h3>
+                Broj putnog naloga: {{ warrant.travel_warrant_number }}
               </button>
             </div>
 
@@ -261,57 +261,41 @@
             </div>
           </div>
         </div>
-  
+        <hr>
+        <div class="form-group">
+          <a class="btn btn-info btn-block" href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}">Dodajte trošak</a>
+        </div>
+        <br>
+        <table id="data" border="1" class="table table-striped">
+            <thead>
+              <tr id="header">
+                <th>Tip troška</th>
+                <th>Opis</th>
+                <th>Iznos</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for trosak in troskovi %}
+              <tr>
+                <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}" title="Uređivanje Troška">{{ trosak.expenses_type }}</a></td>
+                <td class="align-middle"> {{ trosak.description }} </td>
+                <td class="align-middle"> {{ '{:,.2f}'.format(trosak.amount) }} {{ trosak.amount_currency }} </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+        </table>
+        <hr>
       </div>
     </div>
-      <br>
-
-
-
-
-      <br>
-
-
-      <br>
-      <br>
-      <br>
-      <hr>
-      <div class="form-group">
-        <a class="btn btn-info" href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}">Dodajte trošak</a>
-      </div>
-      <br>
-      <table id="data" border="1" class="table table-striped">
-          <thead>
-            <tr id="header">
-              <th>Tip troška</th>
-              <th>Opis</th>
-              <th>Iznos</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for trosak in troskovi %}
-            <tr>
-              <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}" title="Uređivanje Troška">{{ trosak.expenses_type }}</a></td>
-              <td class="align-middle"> {{ trosak.description }} </td>
-              <td class="align-middle"> {{ trosak.amount }} {{ trosak.amount_currency }} </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-      </table>
-      <br>
-      <hr>
-
-
-    </fieldset>
-    <div class="form-group">
-      <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_list')}}">Nazad</a>
-      {% if warrant.status == 'kreiran' %}
-        <input class="btn btn-primary" type="submit" name="dugme" value="Završi">
-      {% endif %}
-
-      {{ form.submit(class="btn btn-outline-primary") }}
-       <a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">Preuzmite dokument</a>
-    </div>
+  </fieldset>
+  <div class="form-group">
+    <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_list')}}">Nazad</a>
+    {% if warrant.status == 'kreiran' %}
+      <input class="btn btn-primary" type="submit" name="dugme" value="Završi">
+    {% endif %}
+    {{ form.submit(class="btn btn-outline-primary") }}
+      <a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">Preuzmite dokument</a>
+  </div>
   </form>
 </div>
 {% endblock content%}
@@ -326,6 +310,8 @@
     } );
   } );
   var booleanValue = '{{form.abroad.data}}';
+  const inputContryLeaving = $('#contry_leaving');
+  const inputContryReturn = $('#contry_return');
   // window.alert(booleanValue);
   if (booleanValue === 'True') {
     booleanValue = false;
@@ -343,8 +329,18 @@
     var x = document.getElementById("collapseAbrod");
     if (booleanValue === true) {
       x.style.display = "block";
+      inputContryLeaving.attr('required', true);
+      inputContryLeaving.attr('min', $('#start_datetime').val());
+      inputContryLeaving.attr('max', $('#end_datetime').val());
+      inputContryReturn.attr('required', true);
+      inputContryReturn.attr('min', $('#start_datetime').val());
+      inputContryReturn.attr('max', $('#end_datetime').val());
     } else {
       x.style.display = "none";
+      inputContryLeaving.attr('required', false);
+      inputContryReturn.attr('required', false);
+      inputContryLeaving.val('');
+      inputContryReturn.val('');
     }
   }
 </script>
