--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -18,7 +18,13 @@
       {% for vehicle in vehicles %}
         <tr>
           <td><a class="mr-2 btn btn-info" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Uređivanje vozila">{{ vehicle.vehicle_type }}</a></td>
-          <td>{{ vehicle.vehicle_brand }}</td>
+          <td>
+            {% if vehicle.vehicle_ownership == 'company' %}
+              <img src="../../static/img/P-Light.png" alt="(P)" style="float: left; margin-right: 10px; width: 32px; height: 32px;" title="Privatno vozilo">
+            {% else %}
+              <img src="../../static/img/S-Light.png" alt="(S)" style="float: left; margin-right: 10px; width: 32px; height: 32px;" title="Službeno vozilo">
+            {% endif %}
+              {{ vehicle.vehicle_brand }}</td>
           <td>{{ vehicle.vehicle_registration }}</td>
           <td>{{ vehicle.vehicle_company.companyname }}</td>
         </tr>
@@ -37,7 +43,13 @@
         {% if vehicle.vehicle_company.id == current_user.user_company.id %}
           <tr>
             <td><a class="mr-2 btn btn-info" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Uređivanje vozila">{{ vehicle.vehicle_type }}</a></td>
-            <td>{{ vehicle.vehicle_brand }}</td>
+            <td>
+              {% if vehicle.vehicle_ownership == 'company' %}
+                <img src="../../static/img/P-Light.png" alt="(P)" style="float: left; margin-right: 10px; width: 32px; height: 32px;" title="Privatno vozilo">
+              {% else %}
+                <img src="../../static/img/S-Light.png" alt="(S)" style="float: left; margin-right: 10px; width: 32px; height: 32px;" title="Službeno vozilo">
+              {% endif %}
+              {{ vehicle.vehicle_brand }}</td>
             <td>{{ vehicle.vehicle_registration }}</td>
           </tr>
         {% endif %}
